Source/WebCore/dom/Document.h
@@ -1292,7 +1292,7 @@ public:
     void removeAudioProducer(AudioProducer*);
     bool isPlayingAudio() const { return m_isPlayingAudio; }
     void updateIsPlayingAudio();
-    void setMuted(bool);
+    void pageMutedStateDidChange();
 
 protected:
     enum ConstructionFlags { Synthesized = 1, NonRenderedPlaceholder = 1 << 1 };
