Source/WebCore/page/Page.h
@@ -438,6 +438,7 @@ public:
 
     bool isPlayingAudio() const { return m_isPlayingAudio; }
     void updateIsPlayingAudio();
+    bool isMuted() const { return m_muted; }
     WEBCORE_EXPORT void setMuted(bool);
 
 private:
@@ -517,6 +518,7 @@ private:
     bool m_inLowQualityInterpolationMode;
     bool m_areMemoryCacheClientCallsEnabled;
     float m_mediaVolume;
+    bool m_muted;
 
     float m_pageScaleFactor;
     float m_zoomedOutPageScaleFactor;
